fdo#43304: Safeguard ourselves from potential crashes.

This is not a real fix, however.  Import of pivot table still fails
but is at least better than crashing.  A real fix is still being
worked on.